--- a/assets/css/Mobile_scrollFilter.css
+++ b/assets/css/Mobile_scrollFilter.css
@@ -51,9 +51,6 @@
     max-height: var(--dropdown-arrow-size-max);
     right: 5%;
     margin-top: calc(var(--filter-height) / 16);
-    /* background: var(--down-arrow-icon-url); */
-    /* background-size: 100%, 100%; */
-    /* background-repeat: no-repeat; */
     padding: 0px;
 }
 
@@ -192,9 +189,10 @@
     width: var(--help-icon-size);
     min-width: var(--help-icon-size-min);
     max-width: var(--help-icon-size-max);
-    background: var(--help-icon-url);
+    /* background: var(--help-icon-url);
     background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+    padding: 0%;
 }
 
 #close-help-overlay-btn {
